remove old and add new files