@@ -6,13 +6,62 @@
 
     <groupId>com.unionpay.uplus</groupId>
     <artifactId>uplus-social</artifactId>
-    <packaging>pom</packaging>
     <version>1.0.0</version>
-    <modules>
-        <module>uplus-social-api</module>
-        <module>uplus-social-rest</module>
-        <module>uplus-social-service</module>
-    </modules>
+
+    <packaging>war</packaging>
+
+    <properties>
+        <dubbo.version>2.5.3</dubbo.version>
+        <spring.version>4.0.5.RELEASE</spring.version>
+        <version.dbutils>1.5</version.dbutils>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Build args -->
+        <!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
+        <skip_maven_deploy>true</skip_maven_deploy>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.spec</groupId>
+                <artifactId>jboss-javaee-6.0</artifactId>
+                <version>3.0.2.Final</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>jaxrs-api</artifactId>
+            <version>2.3.5.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.spec.javax.servlet</groupId>
+            <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.6</version>
+        </dependency>
 
 
+        <dependency>
+            <groupId>commons-dbutils</groupId>
+            <artifactId>commons-dbutils</artifactId>
+            <version>${version.dbutils}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.31</version>
+        </dependency>
+    </dependencies>
 </project>
